# iPrompt

./: .env.example  .gitignore  GITHUB_ACTIONS_FIX_SUMMARY.md  README.md  app.json  docker-compose.yml  i18next-parser.config.js  index.html  netlify.toml  package-lock.json  package.json  railway.json  render.yaml  static.json  tsconfig.json  vercel.json  version.json  vite.config.ts  wrangler.toml
.github/: RELEASE_TEMPLATE.md  TRANSLATION_SECRETS.md
.github/workflows/: build-simple.yml  build.yml  ci-simple.yml  ci.yml  release.yml
docker/: Dockerfile.api  Dockerfile.api-simple  Dockerfile.dev  Dockerfile.dev-simple  Dockerfile.init  Dockerfile.tauri-dev  Dockerfile.web  build-tauri.sh  start-dev.sh
docs/: README.md
docs/en/: deployment.md  development.md
docs/zh/: README.md  cloudflare-deployment.md  storage-debug.md
public/locales/en/: translation.json
public/locales/ja/: translation.json
public/locales/zh/: translation.json
src/: vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/api/: index.ts
src/app/: App.tsx  index.css  main.tsx
src/app/api/: platform.ts
src/app/components/: CopyMenu.tsx  FullScreenEditor.tsx  LanguageSwitcher.tsx  Layout.tsx  PlatformInfo.tsx  PromptHeader.tsx  PromptList.tsx  PromptSearch.tsx  PromptTranslationTabs.css  PromptTranslationTabs.tsx  SettingsDialog.tsx  SyncFromWeb.tsx  ThemeProvider.tsx  TranslationSettings.tsx  VersionHistoryDialog.tsx  VersionPreviewTooltip.tsx  WelcomePrompts.tsx
(+22 files in other folders)
